--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.6.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.35.0",
-    "lucide-react": "^0.562.0",
-    "xlsx": "^0.18.5"
+    "recharts": "3.6.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@google/genai": "1.35.0",
+    "lucide-react": "0.462.0",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
